# swagger_output.json
@@ -165,53 +165,41 @@
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
-                  "type": "string",
-                  "example": "Natália Alpino"
-                },
                 "email": {
                   "type": "string",
-                  "example": "nathy.alpino1@gmail.com"
+                  "example": "g@gmail.com"
                 },
                 "oldPassword": {
                   "type": "string",
-                  "example": "pass"
+                  "example": "654321"
                 },
-                "cpf": {
+                "password": {
                   "type": "string",
-                  "example": "000.000.000-000"
+                  "example": "654321"
                 },
                 "contact": {
                   "type": "string",
-                  "example": ""
-                },
-                "postal_code": {
-                  "type": "string",
-                  "example": "14403-075"
-                },
-                "state": {
-                  "type": "string",
-                  "example": "SP"
-                },
-                "city": {
-                  "type": "string",
-                  "example": "Franca"
+                  "example": "165545-9687"
                 },
                 "district": {
                   "type": "string",
-                  "example": "Street"
+                  "example": "Franca"
                 },
                 "number_house": {
-                  "type": "number",
-                  "example": 2390
+                  "type": "string",
+                  "example": "1146"
                 },
                 "street": {
                   "type": "string",
-                  "example": "José Marcelo Leite"
+                  "example": "R. Alvorada"
                 },
                 "complement": {
                   "type": "string",
-                  "example": ""
+                  "example": "esquina"
+                },
+                "postal_code": {
+                  "type": "string",
+                  "example": "14465-897"
                 }
               }
             }
@@ -601,25 +589,45 @@
         "description": "Inicia um novo pedido",
         "parameters": [
           {
-            "name": "obj",
+            "name": "order",
             "in": "body",
+            "description": "Iniciar um novo pedido",
+            "required": true,
+            "type": "string",
             "schema": {
               "type": "object",
               "properties": {
-                "date_purchase": {
-                  "example": "any"
-                },
-                "product_list": {
-                  "example": "any"
+                "store_id": {
+                  "type": "number",
+                  "example": 1
                 },
                 "user_id": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 1
                 },
-                "store_id": {
-                  "example": "any"
+                "date_purchase": {
+                  "type": "string",
+                  "example": "1997-12-03T00:00:00.000Z"
                 },
-                "...data": {
-                  "example": "any"
+                "product_list": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "id": {
+                        "type": "number",
+                        "example": 1
+                      },
+                      "quantity": {
+                        "type": "number",
+                        "example": 1
+                      },
+                      "price": {
+                        "type": "number",
+                        "example": 199
+                      }
+                    }
+                  }
                 }
               }
             }
